add converter for behavioral zip-file

--- a/.datalad/config
+++ b/.datalad/config
@@ -14,3 +14,7 @@
 
 [datalad "procedures.add_customrules"]
 		help = "add hirni's custom_rules.py script to dataset"
+
+[datalad "procedures.behavior-converter"]
+		call-format = "matlab -nojvm -nodisplay -nosplash -r {script} {ds} {{location}} sub-{{bids-subject}}/func/sub-{{bids-subject}}_task-{{bids-task}}"
+		help = "helper to convert behavioral zip-file into valid events.tsv files"
