--- a/.datalad/config
+++ b/.datalad/config
@@ -20,3 +20,4 @@
 		help = "helper to convert behavioral zip-file into valid events.tsv files"
 [datalad "hirni.dicom2spec"]
 	rules = code/hirni_addons/custom_rules/custom_rules.py
+	rules = code/hirni_addons/custom_rules/custom_rules.py
